version/0.30/_sources/api/solver/_autosummary/settings/discrete_phase_2.rst.txt
:orphan:

.. _discrete_phase_2:

discrete_phase
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.discrete_phase_2
    :show-inheritance:

.. rubric:: Attributes

==========================================================   ===============================

Attribute                                                                            Summary

==========================================================   ===============================
:ref:`bc_type <bc_type_1>`                                           Discrete Phase BC Type.

:ref:`reinject_using_injection <reinject_using_injection>`                Use Settings from.

:ref:`bc_user_function <bc_user_function>`                       Discrete Phase BC Function.

:ref:`dem_collision_partner <dem_collision_partner>`                  DEM Collision Partner.

==========================================================   ===============================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`fan_child <fan_child>`                               'child_object_type' of fan.

:ref:`phase_4_child <phase_4_child>`                     'child_object_type' of phase.

:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

:ref:`phase_16_child <phase_16_child>`                   'child_object_type' of phase.

:ref:`radiator_child <radiator_child>`                'child_object_type' of radiator.

:ref:`phase_20_child <phase_20_child>`                   'child_object_type' of phase.

:ref:`settings_7 <settings_7>`                      Domain name to define settings on.

:ref:`phase_30_child <phase_30_child>`                   'child_object_type' of phase.

:ref:`settings_19 <settings_19>`                    Domain name to define settings on.

:ref:`phase_42_child <phase_42_child>`                   'child_object_type' of phase.

:ref:`settings_23 <settings_23>`                    Domain name to define settings on.

:ref:`phase_46_child <phase_46_child>`                   'child_object_type' of phase.

============================================   =======================================

