version/0.42/_sources/api/solver/_autosummary/settings/discrete_phase_2.rst.txt
:orphan:

.. _discrete_phase_2:

discrete_phase
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.discrete_phase_2
    :show-inheritance:

.. rubric:: Attributes

==========================================================   ===============================

Attribute                                                                            Summary

==========================================================   ===============================
:ref:`bc_type <bc_type_2>`                                           Discrete Phase BC Type.

:ref:`reinject_using_injection <reinject_using_injection>`                Use Settings from.

:ref:`bc_user_function <bc_user_function>`                       Discrete Phase BC Function.

:ref:`dem_collision_partner <dem_collision_partner>`                  DEM Collision Partner.

==========================================================   ===============================

.. rubric:: Included in:

==================================================   =====================================================

Parent                                                                                             Summary

==================================================   =====================================================
:ref:`fan_child <fan_child>`                                                   'child_object_type' of fan.

:ref:`phase_6_child <phase_6_child>`                                         'child_object_type' of phase.

:ref:`porous_jump_child <porous_jump_child>`                           'child_object_type' of porous_jump.

:ref:`phase_18_child <phase_18_child>`                                       'child_object_type' of phase.

:ref:`radiator_child <radiator_child>`                                    'child_object_type' of radiator.

:ref:`phase_22_child <phase_22_child>`                                       'child_object_type' of phase.

:ref:`fan_settings <fan_settings>`                       Define settings for overlapping boundary portion.

:ref:`porous_jump_settings <porous_jump_settings>`       Define settings for overlapping boundary portion.

:ref:`radiator_settings <radiator_settings>`             Define settings for overlapping boundary portion.

:ref:`fan_1_child <fan_1_child>`                                               'child_object_type' of fan.

:ref:`phase_30_child <phase_30_child>`                                       'child_object_type' of phase.

:ref:`porous_jump_2_child <porous_jump_2_child>`                       'child_object_type' of porous_jump.

:ref:`phase_42_child <phase_42_child>`                                       'child_object_type' of phase.

:ref:`radiator_2_child <radiator_2_child>`                                'child_object_type' of radiator.

:ref:`phase_46_child <phase_46_child>`                                       'child_object_type' of phase.

==================================================   =====================================================

